2001-08-31  Akim Demaille  <akim@epita.fr>

	* bin/autoheader.in: Rewrite in Perl.
	* tests/autoheader: Adjust.

2001-08-31  Akim Demaille  <akim@epita.fr>

	* bin/autoconf.in (--include, -I): New option.
	Map --localdir, --autoconf-dir onto it.
	Forward autom4te's options instead of interpreting them.
	* bin/autoconf.in, bin/autoheader.in (AC_MACRODIR, autoconf_dir):
	There is no such envvar since the inception of autom4te.cfg.
	* bin/autom4te.in (&parse_args): Uniquify `@include'.
	* bin/autoupdate.in: Adjust, and perform more control.
	* tests/atspecific.m4 (AT_CHECK_AUTOCONF): Adjust.
	* tests/autoconf: Dittowise.

	
2001-08-31  Akim Demaille  <akim@epita.fr>

	* bin/autoconf.in: Don't bother with `acsite.m4' and `aclocal.m4'.
	* bin/autom4te.in (&find_file): Support `FILE?' standing for
	optionally `FILE'.
	Use -e, not -f, since /dev/null for instance is OK.
	(&parse_args): Adjust.
	* lib/autom4te.in (Autoconf): Add `acsite.m4?' and `aclocal.m4?'.

	
2001-08-31  Akim Demaille  <akim@epita.fr>

	* configure.ac: Also find tested executables in bin.
	* bin/autoconf.in, bin/autoheader.in, bin/autoreconf.in,
	* bin/autoscan.in, autoupdate.in: Use exclusively the name of the
	installed peer executables, only PATH is allowed to resolve it.
	Pass `autoconf_dir' via options, not via invisible envvars.
	* lib/Autom4te/General.pm (&find_peer): Remove.
	* lib/autotest/general.m4 (AT_INIT): `AUTOTEST_PATH=a:b' gives
	`abuild:asrc:bbuild:bsrc', not `abuild:bbuild:asrc:bsrc'.
	* man/Makefile.am: Let help2man rely on PATH instead of trying to
	find the executables for it.
	* tests/Makefile.am: Major cleanup.  Too lazy to document...
	* tests/atlocal.in: Remove all the obscure envvar manipulations.
	We only need PERL.
	* tests/atspecific.m4, tests/tools.at: Passing --localdir is
	indeed related to running the test suite, while passing
	--autoconf-dir and others is related to running non installed
	Autoconf executables.  So don't do that, leave it to...