@@ -1,5 +1,14 @@
 2001-08-31  Akim Demaille  <akim@epita.fr>
 
+	* lib/Autom4te/General.pm (&find_file, &update_file): New.
+	* bin/autoupdate.in, bin/autoheader.in: Adjust.
+	Drop AC_MACRODIR dead for real.
+	* tests/atspecific.m4 (AT_CHECK_AUTOHEADER): Now autoheader says
+	`autoheader: `config.hin' is created'.
+	* tests/tools.at (Syntax of the Perl scripts): Check autoheader.
+
+2001-08-31  Akim Demaille  <akim@epita.fr>
+
 	* bin/autoheader.in: Rewrite in Perl.
 	* tests/autoheader: Adjust.
 
